mtls/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tubes-kpk
  labels:
    istio-injection: enabled
